--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,410 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="../src/images/logo.svg"
+      type="image/x-icon"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body" id="top">
+    <header class="header">
+      <div class="header__bg"></div>
+
+      <div class="container">
+        <div class="header__container">
+          <div class="header__top">
+            <a href="#menu" class="header__top-link">
+              <img
+                class="header__top-logo"
+                src="../src/images/icon/menu.svg"
+                alt="menu"
+              >
+            </a>
+
+            <a href="#" class="header__top-menu-link">
+              <img
+                class="header__logo header__logo--top"
+                src="../src/images/logo.svg"
+                alt="logo"
+              >
+            </a>
+          </div>
+
+          <div class="header__tickets">
+            <h1 class="header__tickets-title">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
+
+            <a href="#" class="header__tickets-block">
+              <span class="header__tickets-name">
+                КВИТКИ
+              </span>
+
+              <span class="btn header__tickets--right-block">
+                <img
+                  class="header__tickets-arrow"
+                  src="../src/images/icon/arrow.svg"
+                  alt="arrow"
+                >
+              </span>
+            </a>
+
+            <div class="header__action">
+              <p class="header__action-title">
+                ПОДІЇ
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <nav class="menu menu__nav" id="menu">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__container">
+              <div class="menu__top">
+                <a href="#" class="menu__link">
+                  <img
+                    class="menu__cross"
+                    src="../src/images/icon/cross.svg"
+                    alt="menu"
+                  >
+                </a>
+                <div class="menu__nav-block">
+                  <ul class="menu__nav-list">
+                    <li class="menu__nav-item">
+                      <a href="#galerie" class="menu__nav-link">
+                        Галерея
+                      </a>
+
+                      <a href="#news" class="menu__nav-link">
+                        Виставки та
+                        <br>
+                        події
+                      </a>
+                    </li>
+
+                  </ul>
+                  <ul class="menu__nav-list">
+                    <li class="menu__nav-item">
+                      <a href="#about-us" class="menu__nav-link">
+                        Про Нас
+                      </a>
+
+                      <a href="#contacts" class="menu__nav-link">
+                        Контакти
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="menu__schedule">
+              <h3 class="menu__schedule-title">
+                Графік роботи
+              </h3>
+
+              <div class="menu__schedule-block">
+                <ul class="menu__schedule-info">
+                  <li class="menu__schedule-day">
+                    <span class="menu__schedule-day--bold">12:00 — 20:00</span> середа
+                  </li>
+                  <li class="menu__schedule-day">
+                    <span class="menu__schedule-day--bold">12:00 — 20:00</span> четвер
+                  </li>
+                  <li class="menu__schedule-day">
+                    <span class="menu__schedule-day--bold">12:00 — 20:00</span> п’ятниця
+                  </li>
+                  <li class="menu__schedule-day">
+                    <span class="menu__schedule-day--bold">11:00 — 19:00</span> субота
+                  </li>
+                  <li class="menu__schedule-day">
+                    <span class="menu__schedule-day--bold">11:00 — 19:00</span> неділя
+                  </li>
+                </ul>
+
+                <p class="menu__schedule-day menu__schedule-day--position-right">
+                  <span class="menu__schedule-day--bold">Вихідні:</span> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main class="main">
+      <section class="news page__news" id="news">
+        <div class="container">
+          <h1 class="page__section-title events__title">
+            Актуальні події
+          </h1>
+
+          <div class="events__content">
+            <img
+              class="events__img"
+              src="../src/images/events/1.png"
+              alt="events1"
+            >
+
+            <div class="events__container">
+              <div class="events__block-title">
+                <p class="events__name">
+                  ВИСТАВКА
+                </p>
+                <p class="events__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <h3 class="events__head-title">
+                Йду і повертаюсь
+              </h3>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__content">
+            <img
+              class="events__img"
+              src="../src/images/events/2.png"
+              alt="events2"
+            >
+
+            <div class="events__container">
+              <div class="events__block-title">
+                <p class="events__name">
+                  ВИСТАВКА
+                </p>
+                <p class="events__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="events__head-title">
+                І спогади і мрії
+              </h3>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="events page__events">
+        <div class="events__content-block">
+          <img
+            class="events__img-poster"
+            src="../src/images/events/3.png"
+            alt="events3"
+          >
+
+          <div class="events__start">
+            <div class="events__start-block">
+              <p class="events__name">
+                ЛЕКЦІЯ
+              </p>
+
+              <p class="events__date">
+                26/08/2019 - 11:00
+              </p>
+
+            </div>
+            <h3 class="events__start-title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section galerie" id="galerie">
+        <div class="container">
+          <h1 class="page__section-title events__title">
+            Галерея
+          </h1>
+
+          <div class="galerie__block">
+            <div class="galerie__item galerie__item-1"></div>
+            <div class="galerie__item galerie__item-2"></div>
+            <div class="galerie__item galerie__item-3"></div>
+            <div class="galerie__item galerie__item-4"></div>
+          </div>
+
+          <div class="slider swiper">
+            <div class="slider__wrap swiper-wrapper">
+              <div class="slider__slide slider__slide-image1 swiper-slide">
+              </div>
+
+              <div class="slider__slide slider__slide-image2 swiper-slide">
+              </div>
+
+              <div class="slider__slide slider__slide-image3 swiper-slide">
+              </div>
+
+              <div class="slider__slide slider__slide-image4 swiper-slide">
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe page__subscribe" id="about-us">
+        <div class="subscribe__content">
+          <h1 class="subscribe__title">
+            Підписка
+          </h1>
+
+          <p class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            action="#"
+            method="get"
+            class="form subscribe__form"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscribe__email"
+              placeholder="E-mail"
+            >
+
+            <button class="btn subscribe__button">
+              <img
+                src="../src/images/icon/black-arrow.svg"
+                alt="subscribe"
+                class="btn__subscribe"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__container">
+            <div class="footer__nav">
+              <a
+                href="#"
+                class="footer__logo page__logo"
+                alt="logo"
+              >
+              </a>
+              <div class="footer__block-social">
+                <a
+                  href="https://facebook.com/"
+                  alt="facebook"
+                  target="_blank"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" class="footer__icon--fb"><path d="M2.72 4.649v3.304H.303v4.04H2.72v12.008h4.965V11.994h3.332s.312-1.937.463-4.056H7.704V5.176c0-.413.541-.969 1.076-.969h2.705V.001H7.807c-5.21 0-5.087 4.044-5.087 4.648z"></path></svg>
+                </a>
+                <a
+                  href="https://instagram.com/"
+                  alt="instagram"
+                  target="_blank"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" class="footer__icon--inst"><g clip-path="url(#clip0_12665_559)"><path d="M17.503 0H6.497A6.504 6.504 0 000 6.497v11.007A6.504 6.504 0 006.497 24h11.007A6.504 6.504 0 0024 17.504V6.497A6.504 6.504 0 0017.503 0zM12 18.562A6.57 6.57 0 015.438 12 6.57 6.57 0 0112 5.438 6.57 6.57 0 0118.562 12 6.57 6.57 0 0112 18.562zm6.72-11.577c-1.07 0-1.94-.87-1.94-1.939 0-1.07.87-1.94 1.94-1.94 1.069 0 1.939.87 1.939 1.94 0 1.07-.87 1.94-1.94 1.94z"></path><path d="M12 6.845A5.161 5.161 0 006.845 12 5.161 5.161 0 0012 17.155 5.161 5.161 0 0017.155 12 5.161 5.161 0 0012 6.845zM18.72 4.514a.533.533 0 100 1.066.533.533 0 000-1.066z"></path></g></svg>
+                </a>
+              </div>
+            </div>
+
+            <div class="footer__info">
+              <div class="footer__schedule schedule">
+                <p class="schedule__title">
+                  Графік роботи
+                </p>
+                <ul class="schedule__list">
+                  <li class="schedule__day"><span class="schedule--time">12:00 — 20:00</span> середа</li>
+                  <li class="schedule__day"><span class="schedule--time">12:00 — 20:00</span> четвер</li>
+                  <li class="schedule__day"><span class="schedule--time">12:00 — 20:00</span> п’ятниця</li>
+                  <li class="schedule__day"><span class="schedule--time">11:00 — 19:00</span> субота</li>
+                  <li class="schedule__day"><span class="schedule--time">11:00 — 19:00</span> неділя</li>
+                  <li class="schedule__day">
+                    <span class="schedule--time">Вихідні:</span> понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </li>
+                </ul>
+              </div>
+              <div class="footer__contact contact">
+                <p class="schedule__title">
+                  Контакти:
+                </p>
+                <ul class="schedule__list">
+                  <li class="schedule__contact">вул. М. Грушевського, 6; Київ, 01001</li>
+                  <li class="schedule__contact">тел. +38 (044) 278-13-57</li>
+                  <li class="schedule__contact">факс +38 (044) 278-74-54</li>
+                  <li class="schedule__contact">e-mail: info@namu.kiev.ua</li>
+                </ul>
+              </div>
+              <a href="#top" class="page__top"></a>
+            </div>
+          </div>
+
+          <div class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <a href="#galerie" class="footer__menu-link">
+                  Галерея
+                </a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="#news" class="footer__menu-link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <a href="#about-us" class="footer__menu-link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="#contacts" class="footer__menu-link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__copyring">
+          <p class="footer__copyring-title">
+            Designed by Zhyriada Marina
+          </p>
+
+          <p class="footer__copyring-title">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
