--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,428 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Museum</title>
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="images/img/logo-header.png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <link
+    rel="preconnect"
+    href="https://fonts.gstatic.com"
+    crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body id="home">
+
+    <header class="header">
+
+      <div class="menu">
+        <div class="wrapper-container wrapper-container--menu">
+          <nav class="nav nav--header">
+            <ul class="nav__list nav__list--text-color-white">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link nav__link--header">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#events" class="nav__link nav__link--header">
+                  Виставки та <br>
+                  події
+                </a>
+              </li>
+            </ul>
+
+            <ul class="nav__list nav__list--text-color-white">
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link nav__link--header">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link nav__link--header">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__divider"></div>
+
+          <div class="menu__wrapper">
+
+            <p class="menu__caption">
+              Графік роботи
+            </p>
+
+            <div class="menu__timetable">
+              <time class="menu__time">
+                <strong>12:00 — 20:00</strong> середа <br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </time>
+            </div>
+          </div>
+
+          <div class="menu__weekends">
+            <strong>Вихідні</strong> понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину <br>
+            до закриття музею
+          </div>
+        </div>
+
+      </div>
+
+      <div class="wrapper-container wrapper-container--header">
+
+        <div class="header__burger-menu">
+          <span class="header__burger-line"></span>
+          <span class="header__burger-line"></span>
+          <span class="header__burger-line"></span>
+        </div>
+
+        <div class="header__wrapper-text">
+          <h1 class="header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+
+          <div class="header__tickets">
+            <a href="#events" class="header__link">
+              Квитки
+            </a>
+
+            <button class="header__button">
+              <img src="images/icons/arrow-left.svg" alt="arrow">
+            </button>
+          </div>
+        </div>
+
+        <a class="header__subtitle" href="#events">
+          ПОДІЇ
+        </a>
+
+      </div>
+
+      <div class="header__main-photo"></div>
+
+    </header>
+
+    <main class="main">
+      <section class="events" id="events">
+        <div class="wrapper-container">
+          <h2 class="title">
+            Актуальні події
+          </h2>
+
+          <article class="events__event">
+            <img
+              src="images/img/event1.jpg"
+              alt="photo-landscape"
+              class="events__photo"
+            >
+
+            <div class="events__side-wrapper">
+
+              <div class="events__text-wrapper">
+                <h3 class="events__type">
+                  ВИСТАВКА
+                </h3>
+
+                <date class="events__date">
+                  26.08-29.11.2019
+                </date>
+              </div>
+
+              <h3 class="events__subtitle">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="events__description">
+                Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+          </article>
+
+          <article class="events__event">
+            <img
+              src="images/img/event2.jpg"
+              alt="photo-landscape"
+              class="events__photo"
+            >
+
+            <div class="events__side-wrapper">
+
+              <div class="events__text-wrapper">
+                <h3 class="events__type">
+                  ВИСТАВКА
+                </h3>
+
+                <date class="events__date">
+                  26.08-29.11.2019
+                </date>
+              </div>
+
+              <h3 class="events__subtitle">
+                І спогади і мрії
+              </h3>
+
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці  Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+          </article>
+        </div>
+      </section>
+
+      <section class="current-event">
+        <img
+          src="images/img/sunset-drawing.jpg"
+          alt="photo"
+          class="current-event__photo"
+        >
+
+        <div class="current-event__wrapper-block">
+          <div class="current-event__text-wrapper">
+            <h3 class="current-event__type">
+              ВИСТАВКА
+            </h3>
+
+            <date class="current-event__date">
+              26.08-29.11.2019
+            </date>
+          </div>
+
+          <h3 class="current-event__subtitle">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+
+      </section>
+
+      <section class="gallery" id="gallery">
+
+        <div class="container container--only-desktop">
+          <h2 class="title">
+            Галерея
+          </h2>
+
+          <img
+            src="images/img/national-woman.jpg"
+            alt="museum-picture"
+            class="gallery__image gallery__image--column-4"
+          >
+
+          <img
+            src="images/img/winter-house.jpg"
+            alt="museum-picture"
+            class="gallery__image gallery__image--column-8"
+          >
+
+          <img
+            src="images/img/girl-on-bench.jpg"
+            alt="museum-picture"
+            class="gallery__image gallery__image--column-8"
+          >
+
+          <img
+            src="images/img/hot-drawing.jpg"
+            alt="museum-picture"
+            class="gallery__image gallery__image--column-4"
+          >
+
+        </div>
+
+        <div class="wrapper-container">
+
+          <div class="carousel">
+            <div class="slider">
+              <div>
+                <img src="images/img/national-woman.jpg" alt="1">
+              </div>
+
+              <div>
+                <img src="images/img/gooses-drawing.jpg" alt="1">
+              </div>
+
+              <div>
+                <img src="images/img/winter-house.jpg" alt="1">
+              </div>
+
+              <div>
+                <img src="images/img/hot-drawing.jpg" alt="1">
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+      </section>
+
+      <section class="subscription" id="subscription">
+        <h2 class="title title--white title--text-align-center">
+          Підписка
+        </h2>
+
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="#" class="subscription__form">
+          <input
+          type="email"
+          class="subscription__input"
+          placeholder="Email"
+          required
+          >
+
+          <button class="subscription__button"></button>
+        </form>
+
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper-top">
+
+          <a href="#home">
+            <img
+              src="images/img/logo-footer.png"
+              alt="logo"
+              class="footer__logo"
+            >
+          </a>
+
+          <div class="footer__socials-wrapper">
+            <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" target="_blank">
+              <span class="icon facebook"></span>
+            </a>
+
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+              <span class="icon instagram"></span>
+            </a>
+
+          </div>
+        </div>
+
+        <p class="footer__caption">
+          Графік роботи
+        </p>
+
+        <p class="footer__caption">
+          Контакти:
+        </p>
+
+        <div class="footer__timetable">
+          <time class="footer__time">
+            <strong>12:00 — 20:00</strong> середа <br>
+            <strong>12:00 — 20:00</strong> четвер <br>
+            <strong>12:00 — 20:00</strong> п’ятниця <br>
+            <strong>11:00 — 19:00</strong> субота <br>
+            <strong>11:00 — 19:00</strong> неділя
+          </time>
+        </div>
+
+        <div class="footer__contacts" id="contacts">
+          <address>
+            <a href="https://www.google.com/maps/place/%D0%B2%D1%83%
+            D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0
+            %B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2
+            %D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1
+            %97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb
+            43e10?sa=X&ved=2ahUKEwi7x5XBqL7_AhUGposKHU4MAvgQ8gF6BAgQEAI"
+            target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+          </address>
+          тел. <a href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
+          факс <a href="tel:+380442787454">+38 (044) 278-74-54</a> <br>
+          e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+        </div>
+
+        <div class="footer__weekends">
+          <strong>Вихідні</strong> понеділок, вівторок <br>
+          Каса припиняє роботу за 1 годину <br>
+          до закриття музею
+        </div>
+
+        <div class="footer__divider"></div>
+
+        <nav class="nav nav--footer">
+          <div class="container container--padding-0">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+
+          </div>
+        </nav>
+
+        <div class="footer__designed-by">
+          <p class="footer__author">
+            Designed by Zhyriada Marina
+          </p>
+
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+
+      </div>
+    </footer>
+
+    <div class="overlay"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
